<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/car_picture"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:cropToPadding="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_no_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/car_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_price"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/car_price_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/car_price_edit" />

    <TextView
        android:id="@+id/car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_model"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/car_model_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/car_model_edit" />

    <TextView
        android:id="@+id/car_producer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_producer"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/car_producer_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/car_producer_edit" />

    <TextView
        android:id="@+id/car_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_type"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/car_type_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/car_type_edit" />

    <TextView
        android:id="@+id/car_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_year"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/car_year_edit"
        app:layout_constraintBottom_toBottomOf="@id/car_year_edit"/>
    <TextView
        android:id="@+id/car_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_color"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/car_color_edit"
        app:layout_constraintBottom_toBottomOf="@id/car_color_edit" />

    <EditText
        android:id="@+id/car_price_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/car_price_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_producer"
        app:layout_constraintTop_toBottomOf="@id/car_picture" />

    <EditText
        android:id="@+id/car_model_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/car_model_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_producer"
        app:layout_constraintTop_toBottomOf="@id/car_price_edit" />
    <EditText
        android:id="@+id/car_producer_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/car_producer_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_producer"
        app:layout_constraintTop_toBottomOf="@id/car_model_edit" />
    <EditText
        android:id="@+id/car_type_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/car_type_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_producer"
        app:layout_constraintTop_toBottomOf="@id/car_producer_edit" />

    <EditText
        android:id="@+id/car_year_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/car_year_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_producer"
        app:layout_constraintTop_toBottomOf="@id/car_type_edit"/>
    <EditText
        android:id="@+id/car_color_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/car_color_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/car_producer"
        app:layout_constraintTop_toBottomOf="@id/car_year_edit" />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/gallery_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/camera_button"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_photo"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>